Updated file names and unneeded deps

--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "test": "gulp test",
     "dev": "gulp watch"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "dependencies": {
-    "awesomplete": "1.1.1",
-    "superagent": "3.4.1"
+    "awesomplete": "1.1.1"
   }
 }
