--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "babel-preset-es2015": "6.18.0",
     "babelify": "7.3.0",
     "browserify": "14.0.0",
-    "express": "^4.14.1",
+    "express": "4.14.1",
     "gulp": "3.9.1",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "2.4.0",
@@ -20,7 +20,7 @@
     "phantomjs-prebuilt": "2.1.14",
     "pump": "1.0.2",
     "rimraf": "2.5.4",
-    "simulant": "^0.2.2",
+    "simulant": "0.2.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.9.0"
@@ -38,7 +38,7 @@
     "test": "gulp test",
     "dev": "gulp watch"
   },
-  "version": "1.0.3",
+  "version": "1.0.4",
   "dependencies": {
     "awesomplete": "1.1.1"
   }
