--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "test": "gulp test",
     "dev": "gulp watch"
   },
-  "version": "1.1.7",
+  "version": "1.1.8",
   "dependencies": {
-    "awesomplete": "1.1."
+    "awesomplete": "1.1.1"
   }
 }
