--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "test": "gulp test",
     "dev": "gulp watch"
   },
-  "version": "1.1.8",
+  "version": "1.1.9",
   "dependencies": {
-    "awesomplete": "1.1.1"
+    "awesomplete": "1.1.1",
+    "deepmerge": "^1.3.2"
   }
 }
