--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "author": "c10ckw0rk",
-  "description": "address-autcomplete",
-  "devDependencies": {
-    "babel-preset-es2015": "6.18.0",
-    "babelify": "7.3.0",
-    "browserify": "14.0.0",
-    "express": "4.14.1",
-    "gulp": "3.9.1",
-    "gulp-rename": "1.2.2",
-    "gulp-sourcemaps": "2.4.0",
-    "gulp-uglify": "2.0.1",
-    "jasmine-core": "2.5.2",
-    "karma": "1.4.1",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-simple-reporter": "^2.0.0",
-    "karma-verbose-reporter": "0.0.5",
-    "phantomjs-prebuilt": "2.1.14",
-    "pump": "1.0.2",
-    "rimraf": "2.5.4",
-    "simulant": "0.2.2",
-    "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "watchify": "3.9.0"
-  },
-  "license": "ISC",
-  "main": "dist/address-autcomplete.min.js",
-  "name": "address-autcomplete",
-  "repository": "https://github.com/c10ckw0rk/address-autcomplete.git",
-  "scripts": {
-    "build": "npm run clean && npm run build:dev && gulp test && npm run build:prod",
-    "build:dev": "gulp build",
-    "build:prod": "gulp dist",
-    "clean": "rimraf dist",
-    "prepublish": "npm run build",
-    "test": "gulp test",
-    "dev": "gulp watch"
-  },
-  "version": "1.2.0",
-  "dependencies": {
-    "awesomplete": "1.1.1",
-    "deepmerge": "^1.3.2"
-  }
+    "author": "c10ckw0rk",
+    "dependencies": {
+        "awesomplete": "1.1.1",
+        "deepmerge": "^1.3.2"
+    },
+    "description": "address-autcomplete",
+    "devDependencies": {
+        "babel-preset-es2015": "6.18.0",
+        "babelify": "7.3.0",
+        "browserify": "14.0.0",
+        "express": "4.14.1",
+        "gulp": "3.9.1",
+        "gulp-rename": "1.2.2",
+        "gulp-sourcemaps": "2.4.0",
+        "gulp-uglify": "2.0.1",
+        "jasmine-core": "2.5.2",
+        "karma": "1.4.1",
+        "karma-chrome-launcher": "2.0.0",
+        "karma-jasmine": "1.1.0",
+        "karma-phantomjs-launcher": "1.0.2",
+        "karma-simple-reporter": "^2.0.0",
+        "karma-verbose-reporter": "0.0.5",
+        "phantomjs-prebuilt": "2.1.14",
+        "pump": "1.0.2",
+        "rimraf": "2.5.4",
+        "simulant": "0.2.2",
+        "vinyl-buffer": "1.0.0",
+        "vinyl-source-stream": "1.1.0",
+        "watchify": "3.9.0"
+    },
+    "license": "ISC",
+    "main": "dist/address-autcomplete.min.js",
+    "name": "address-autcomplete",
+    "repository": "https://github.com/c10ckw0rk/address-autcomplete.git",
+    "scripts": {
+        "build": "npm run clean && npm run build:dev && gulp test && npm run build:prod",
+        "build:dev": "gulp build",
+        "build:prod": "gulp dist",
+        "clean": "rimraf dist",
+        "dev": "gulp watch",
+        "prepublish": "npm run build",
+        "test": "gulp test"
+    },
+    "version": "1.2.1"
 }
